Update swagger with auth endpoints info
closes gh-13
